# raft-vm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: arithmetic.raft  control_flow.raft  literals.raft
src/: compiler.rs  lib.rs  main.rs  runtime.rs
src/vm/: backend.rs  error.rs  execution.rs  heap.rs  mod.rs  opcodes.rs  value.rs  vm.rs
tests/: compiler.rs  jump_if_false.rs  reference_counts.rs  vm_errors.rs
